processed/gerrit/txt/55989.txt
Change:     55989
Subject:    LU-18127 autoconf: fix configure tests -Warray-bounds errors
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/55989
Change-Id:  Iee73962ffc117a2f98e8f339462820aff2278815
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2024-08-10 07:58:59.000000000
Updated:    2024-08-23 22:03:36.000000000
Patch Set:  2
Insertions: +16
Deletions:  -9
Comments:   0 (0 unresolved)

--- Labels ---
  Code-Review: Qian Yingjin: +1; Andreas Dilger: +1; Oleg Drokin: +2
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, Andreas Dilger, Jian Yu, Qian Yingjin

--- Commit Message ---
LU-18127 autoconf: fix configure tests -Warray-bounds errors

Kernel commit v5.17-rc3-1-ge6148767825c (Makefile:
Enable -Warray-bounds) enabled -Warray-bounds option,
which caused Lustre configure tests hit false failures
as follows:

  build/conftest.c: In function 'main':
  build/conftest.c:228:39: error: array subscript 0 is
    outside array bounds of 'struct inode_operations[0]'
    [-Werror=array-bounds]
    228 | ((struct inode_operations *)1)->get_acl((struct inode *)NULL, 0, false);
        |                                       ^~
  cc1: all warnings being treated as errors

This patch fixes the "struct inode_operations" related
configure tests to avoid the above failures.

The -Warray-bounds option was disabled by the following
kernel commits:
- v5.19-rc1-28-gf0be87c42cbd (gcc-12: disable '-Warray-bounds' universally for now)
- v6.2-rc3-9-g5a41237ad1d4 (gcc: disable -Warray-bounds for gcc-11 too)
- v6.3-rc7-202-g0da6e5fd6c37 (gcc: disable '-Warray-bounds' for gcc-13 too)

Test-Parameters: mdtcount=4 mdscount=2 \
  clientdistro=ubuntu2204 testlist=sanity
Test-Parameters: mdtcount=4 mdscount=2 \
  env=SANITY_EXCEPT="27J 103a 244a" \
  clientdistro=sles15sp6 testlist=sanity
Test-Parameters: optional mdtcount=4 mdscount=2 \
  clientdistro=ubuntu2404 testlist=sanity

Change-Id: Iee73962ffc117a2f98e8f339462820aff2278815
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55989
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Qian Yingjin <qian@ddn.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2024-08-10 07:58:59.000000000) ---
Uploaded patch set 1.

--- Message (Lustre Gerrit Janitor, 2024-08-10 07:59:39.000000000) ---
Patch Set 1:

Cannot detect any functional changes in this patch

--- Message (wc-checkpatch, 2024-08-10 08:01:00.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (jenkins, 2024-08-10 08:33:17.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/106764/ : SUCCESS

--- Message (Andreas Dilger, 2024-08-10 15:36:23.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Autotest, 2024-08-11 00:21:00.000000000) ---
Patch Set 1:

Trevis Autotest 2 retesting enforced review-ldiskfs session on el9.3-x86_64/ldiskfs servers and clients for build 106764 patch 1. Requested by jianyu because of LU-18129.

--- Message (Autotest, 2024-08-11 00:21:20.000000000) ---
Patch Set 1:

Trevis Autotest 2 retesting enforced review-ldiskfs session on el8.9-x86_64/ldiskfs servers and clients for build 106764 patch 1. Requested by jianyu because of LU-17771.

--- Message (Jian Yu, 2024-08-14 17:10:58.000000000) ---
Patch Set 1:

ping Yingjin

--- Message (Qian Yingjin, 2024-08-15 01:22:50.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2024-08-23 22:03:33.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Oleg Drokin, 2024-08-23 22:03:36.000000000) ---
Change has been successfully cherry-picked as a78894ee642d423a244fc0dcbc518c57a458a2db by Oleg Drokin
